# ashare-quant-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: update-cloud-market-data.yml
.streamlit/: config.toml
ashare_quant/: __init__.py  api.py  backtest.py  chart_viewport.py  charting.py  data.py  indicators.py  market_scan.py  report.py  review_journal.py  scanner.py  trade_plan.py  ui_helpers.py  watchlist.py
cloud_data/: market_candidates.csv  market_snapshot.json  watchlist_history_manifest.json
cloud_data/watchlist_history/: 000063.csv  000810.csv  001287.csv  002049.csv  002077.csv  002174.csv  002457.csv  002745.csv  002747.csv  002815.csv  003013.csv  003033.csv  300019.csv  300199.csv  300458.csv  300759.csv  300861.csv  300966.csv  301092.csv  600228.csv  600345.csv  600360.csv  600522.csv  603068.csv  603127.csv  603339.csv  603669.csv  603893.csv  603991.csv  688114.csv  688131.csv  688387.csv
data_cache/: watchlist.txt
scripts/: build_cloud_seed.py  run_market_scan.py  run_sequoia_style_scan.py
tests/: test_api.py  test_api_intraday.py  test_app_source.py  test_ashare_source.py  test_baostock_source.py  test_data_fallback.py  test_data_lazy_imports.py  test_data_resilience.py  test_data_source_priority.py  test_data_status_summary.py  test_enhanced_backtest.py  test_market_scan.py  test_realtime_ashare_priority.py  test_report_export.py  test_review_journal.py  test_scanner.py  test_sequoia_data_source.py  test_strategy.py  test_trade_plan.py  test_ui_helpers.py  test_watchlist.py
