[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant"
version = "0.1.0"
description = "A-share quant research and backtest app"
requires-python = ">=3.9"
dependencies = [
    "akshare",
    "baostock",
    "fastapi",
    "httpx",
    "numpy",
    "pandas",
    "plotly",
    "streamlit",
    "uvicorn[standard]",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ashare_quant*"]
